--- a/proyectoUberWeb/angular.json
+++ b/proyectoUberWeb/angular.json
@@ -121,8 +121,13 @@
               "devServerTarget": "proyectoUberWeb:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "proyectoUberWeb"
 }
